Remove pain article previews from homepage

--- a/src/content/es/forms/omsq.html
+++ b/src/content/es/forms/omsq.html
@@ -57,7 +57,7 @@ title: ÖMSQ-12
             </div>
           </li>
           <li class="stack g-1">
-            <p>En los últimos 2-3 días, valora cuánta molestia te ha causado tu dolor o problema.<br><em class="fs-1">0 = para nada, 10 = completamente</em></p>
+            <p>En los últimos 2–3 días, valora cuánta molestia te ha causado tu dolor o problema.<br><em class="fs-1">0 = para nada, 10 = completamente</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack itemscenter ] [ fs-1 ]"><input required name="q3" type="radio" value="0">0</label>
               <label class="[ stack itemscenter ] [ fs-1 ]"><input required name="q3" type="radio" value="1">1</label>
@@ -73,7 +73,7 @@ title: ÖMSQ-12
             </div>
           </li>
           <li class="stack g-1">
-            <p>En los últimos 2-3 días, apróximadamente, ¿qué porcentage del día ocupa tu dolor o problema?<br><em class="fs-1">0 = nunca, 100 = constantemente</em></p>
+            <p>En los últimos 2–3 días, apróximadamente, ¿qué porcentage del día ocupa tu dolor o problema?<br><em class="fs-1">0 = nunca, 100 = constantemente</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack itemscenter ] [ fs-1 ]"><input required name="q4" type="radio" value="0">0</label>
               <label class="[ stack itemscenter ] [ fs-1 ]"><input required name="q4" type="radio" value="1">10</label>
@@ -99,7 +99,7 @@ title: ÖMSQ-12
         <legend>También necesitamos información sobre tus pensamientos y sensaciones.</legend>
         <ol class="stack g3" start="5">
           <li class="stack g-1">
-            <p>Durante los últimos 2-3 días, valora el nivel de tensión o ansiedad que has experimentado.<br><em class="fs-1">0 = para nada, 10 = completamente</em></p>
+            <p>Durante los últimos 2–3 días, valora el nivel de tensión o ansiedad que has experimentado.<br><em class="fs-1">0 = para nada, 10 = completamente</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack itemscenter ] [ fs-1 ]"><input required name="q5" type="radio" value="0">0</label>
               <label class="[ stack itemscenter ] [ fs-1 ]"><input required name="q5" type="radio" value="1">1</label>
@@ -115,7 +115,7 @@ title: ÖMSQ-12
             </div>
           </li>
           <li class="stack g-1">
-            <p>Durante los últimos 2-3 días, valora cómo de "deprimido" o "de bajón" te has sentido.<br><em class="fs-1">0 = para nada, 10 = completamente</em></p>
+            <p>Durante los últimos 2–3 días, valora cómo de "deprimido" o "de bajón" te has sentido.<br><em class="fs-1">0 = para nada, 10 = completamente</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack itemscenter ] [ fs-1 ]"><input required name="q6" type="radio" value="0">0</label>
               <label class="[ stack itemscenter ] [ fs-1 ]"><input required name="q6" type="radio" value="1">1</label>
