--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -11,7 +11,7 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="stack g5 centerx squeeze12">
+  <div class="stack g6 centerx squeeze12">
     <section class="stack g2 squeeze11">
       <h1>¡Bienvenid@!</h1>
       <div class="sidebar g2 itemsstart">
@@ -28,7 +28,11 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
     <div class="switcher12 g3">
       <section class="squeeze9 flow2">
         <h2 class="h-fancy">Para Pacientes</h2>
-        <p><strong>¡Permanece atento!</strong></p>
+        <section class="flow1/3">
+          <h3>Dolor 101</h3>
+          <p class="fs-1"><em>Te has preguntado alguna vez, ¿qué es el dolor y cómo funciona? En esta serie de 3 partes, introduciremos conceptos claves en la ciencia del dolor que pueden resultarte útiles, independientemente de tu situación.</em></p>
+          <p><strong><em>¡Permanece atento a los artículos!</em></strong></p>
+        </section>
       </section>
       <section class="squeeze9 flow2">
         <h2 class="h-fancy">Para Sanitarios</h2>
@@ -44,7 +48,7 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
         <section class="flow1/3">
           <h3>Formularios</h3>
           <ul>
-            <li><a href="/es/formularios/oemsq-12">ÖMSQ-12</a> - un cuestionario práctico de cribaje en las dolencias musculoesqueléticas, adaptado y traducido de <i>Gabel et al. 2013.</i><strong> Aún no se ha validado en español.</strong></li>
+            <li><a href="/es/formularios/oemsq-12">ÖMSQ-12</a> - Un cuestionario práctico de cribaje en las dolencias musculoesqueléticas, adaptado y traducido de <i>Gabel et al. 2013.</i><strong> Aún no se ha validado en español.</strong></li>
           </ul>
         </section>
       </section>
