--- a/src/content/en/forms/omsq.html
+++ b/src/content/en/forms/omsq.html
@@ -55,7 +55,7 @@ title: ÖMSQ-12
             </div>
           </li>
           <li class="stack g-1">
-            <p>For the last 2-3 days, rate on average how bothersome your pain or problem is.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
+            <p>For the last 2–3 days, rate on average how bothersome your pain or problem is.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q3" type="radio" value="0">0</label>
               <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q3" type="radio" value="1">1</label>
@@ -71,7 +71,7 @@ title: ÖMSQ-12
             </div>
           </li>
           <li class="stack g-1">
-            <p>For the last 2-3 days, what percentage of the day do you notice your pain or problem?<br><em class="fs-1">0 = never, 100 = all the time</em></p>
+            <p>For the last 2–3 days, what percentage of the day do you notice your pain or problem?<br><em class="fs-1">0 = never, 100 = all the time</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q4" type="radio" value="0">0</label>
               <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q4" type="radio" value="1">10</label>
@@ -97,7 +97,7 @@ title: ÖMSQ-12
         <legend>We also need a bit more information on your thoughts and feelings.</legend>
         <ol class="stack g3" start="5">
           <li class="stack g-1">
-            <p>During the past 2-3 days, rate how tense or anxious you have felt.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
+            <p>During the past 2–3 days, rate how tense or anxious you have felt.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q5" type="radio" value="0">0</label>
               <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q5" type="radio" value="1">1</label>
@@ -113,7 +113,7 @@ title: ÖMSQ-12
             </div>
           </li>
           <li class="stack g-1">
-            <p>During the past 2-3 days, rate how "depressed" or "down" you have felt.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
+            <p>During the past 2–3 days, rate how "depressed" or "down" you have felt.<br><em class="fs-1">0 = not at all, 10 = extremely</em></p>
             <div class="grid1 gy-1">
               <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q6" type="radio" value="0">0</label>
               <label class="[ stack itemscenter ] [ fs-1 ]"><input name="q6" type="radio" value="1">1</label>
