--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -11,7 +11,7 @@ description: The pain revolution is here. Whether you're a health professional, 
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="stack g5 centerx squeeze12">
+  <div class="stack g6 centerx squeeze12">
     <section class="stack g2 squeeze11">
       <h1>Welcome!</h1>
       <div class="sidebar g2 itemsstart">
@@ -30,15 +30,8 @@ description: The pain revolution is here. Whether you're a health professional, 
         <h2 class="h-fancy">For Patients</h2>
         <section class="flow1/3">
           <h3>Pain 101</h3>
-          <p class="fs-1"><em>Have you ever wondered what pain is and how it works? In this 3-part series we'll dive into the science of pain without getting overly technical.</em></p>
-          <ul class="flow1/3">
-            {% set posts = collections[locale + '_articles'] %}
-            {% for entry in posts %}
-            {% if entry.data.audience == 'patients' %}
-            <li><a href="{{ entry.url }}">{{ entry.data.title }}{% if entry.data.subtitle %}: {{ entry.data.subtitle }}{% endif %}</a>{% if entry.data.description %} - {{ entry.data.description }}{%endif %}</li>
-            {% endif %}
-            {% endfor %}
-          </ul>
+          <p class="fs-1"><em>Have you ever wondered what pain is and how it works? In this 3-part series we'll introduce key concepts in pain science that you may find useful, no matter your situation.</em></p>
+          <p><strong><em>Stay tuned for the articles!</em></strong></p>
         </section>
       </section>
       <section class="squeeze9 flow2">
@@ -57,7 +50,7 @@ description: The pain revolution is here. Whether you're a health professional, 
         <section class="flow1/3">
           <h3>Forms</h3>
           <ul>
-            <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - a practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al. 2013.</i></li>
+            <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - A practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al. 2013.</i></li>
           </ul>
         </section>
       </section>
