Change spanish articles to entradas

--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -31,13 +31,13 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
         <section class="flow1/3">
           <h3>Dolor 101</h3>
           <p class="fs-1"><em>Te has preguntado alguna vez, ¿qué es el dolor y cómo funciona? En esta serie de 3 partes, introduciremos conceptos claves en la ciencia del dolor que pueden resultarte útiles, independientemente de tu situación.</em></p>
-          <p><strong><em>¡Permanece atento a los artículos!</em></strong></p>
+          <p><strong><em>¡Permanece atento a las entradas!</em></strong></p>
         </section>
       </section>
       <section class="squeeze9 flow2">
         <h2 class="h-fancy">Para Sanitarios</h2>
         <section class="flow1/3">
-          <h3>Artículos</h3>
+          <h3>Entradas</h3>
           <ul class="flow1/3">
             {% set posts = collections[locale + '_articles'] %}
             {% for entry in posts %}
