--- a/src/content/ms.html
+++ b/src/content/ms.html
@@ -41,6 +41,7 @@ description: Multiple Sclerosis CAE
     /*border-radius: var(--radius0);*/
     color: hsl(210, 100%, 90%);
     font-weight: var(--weight700);
+    transition: background .1s;
   }
 
   .tab-btn:hover,
@@ -109,36 +110,56 @@ description: Multiple Sclerosis CAE
       <h2>Symptoms</h2>
       <p><strong>The most common symptoms of MS are:</strong></p>
       <ul>
-        <li>Dysesthesia: One of the first symptom of multiple sclerosis or a relapse, a multiple sclerosis hug is a squeezing sensation around the chest.</li>
-        <li>Fatigue: (80% of people) It affects the person function at home and work and may be the most important symptom in a person with minimal activity limitation.</li>
-        <li>
-          <p>Walking difficulties: Related to several factors such as weaker motor control, spasticity, loss of balance, sensory deficit and fatigue, and can be helped by physical therapy, assistive therapy and medications.</p>
-          <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/walking.jpg" alt=""></div>
-        </li>
-        <li>Numbness or tingling: Numbness of different part of the face, body or limbs. It is generally the first symptom experienced by those eventually diagnosed with multiple sclerosis.</li>
-        <li>Spasticity: feelings of stiffness and a wide range of spasms. The most common ones occur in the legs.</li>
-        <li>Weakness: results from lack of muscles activity or nervous damage. It can be managed with rehabilitation strategies and the use of mobility aids.</li>
-        <li>
-          <p>Vision problems: it is the first symptom of multiple sclerosis for many people. Optic neuritis, neuromyelitis optica, blurred vision, poor contrast or colour vision, and pain on eye movement.</p>
+        <li><strong>Vision problems</strong>
+          <p>The first symptom of MS for many. Optic neuritis, neuromyelitis optica, blurred vision, poor contrast or colour vision, and pain on eye movement.</p>
           <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/vision.jpg" alt=""></div>
         </li>
-        <li>Vertigo and dizziness: With multiple sclerosis the feeling of off balance, lightheaded or vertigo is common</li>
-        <li>Bladder problems: Bladder dysfunction, (80% of people touched by multiple sclerosis). It can be treated with medications, fluid management, and intermittent self-catheterization.</li>
-        <li>Sexual problems: Very common in the general population including people with MS. Sexual drive can be affected by a disease in the central nervous system, fatigue and spasticity. Psychological factors also affect it.</li>
-        <li>Bowel problems: Constipation is frequent among people with multiple sclerosis, as is loss of control of the bowels. Diet, adequate fluid intake, physical activity and medication help treated this symptom</li>
-        <li>
-          <p>Emotional changes: Anxiety, mood swings, irritability, and episodes of uncontrollable laughing and crying are common. These symptoms can become a real challenge for the person and the family.</p>
+        <li><strong>Dysesthesia</strong>
+          <p>One of the first symptom of multiple sclerosis or a relapse, a multiple sclerosis hug is a squeezing sensation around the chest.</p></li>
+        <li><strong>Fatigue (80%)</strong>
+          <p>It affects the person function at home and work and may be the most important symptom in a person with minimal activity limitation.</p>
+        </li>
+        <li><strong>Walking difficulties</strong>
+          <p>Related to several factors such as weaker motor control, spasticity, loss of balance, sensory deficit and fatigue, and can be helped by physical therapy, assistive therapy and medications.</p>
+          <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/walking.jpg" alt=""></div>
+        </li>
+        <li><strong>Numbness or tingling</strong>
+          <p>Numbness of different part of the face, body or limbs. It is generally the first symptom experienced by those eventually diagnosed with multiple sclerosis.</p>
+        </li>
+        <li><strong>Spasticity</strong>
+          <p>feelings of stiffness and a wide range of spasms. The most common ones occur in the legs.</p>
+        </li>
+        <li><strong>Weakness</strong>
+          <p>results from lack of muscles activity or nervous damage. It can be managed with rehabilitation strategies and the use of mobility aids.</p>
+        </li>
+        <li><strong>Vertigo and dizziness</strong>
+          <p>With multiple sclerosis the feeling of off balance, lightheaded or vertigo is common</p>
+        </li>
+        <li><strong>Bladder dysfunction (80%)</strong>
+          <p>It can be treated with medications, fluid management, and intermittent self-catheterization.</p>
+        </li>
+        <li><strong>Sexual problems</strong>
+          <p>Very common in the general population including people with MS. Sexual drive can be affected by a disease in the central nervous system, fatigue and spasticity. Psychological factors also affect it.</p>
+        </li>
+        <li><strong>Bowel problems</strong>
+          <p>Constipation is frequent among people with multiple sclerosis, as is loss of control of the bowels. Diet, adequate fluid intake, physical activity and medication help treated this symptom</p>
+        </li>
+        <li><strong>Emotional changes</strong>
+          <p>Anxiety, mood swings, irritability, and episodes of uncontrollable laughing and crying are common. These symptoms can become a real challenge for the person and the family.</p>
           <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/emotions.jpg" alt=""></div>
         </li>
-        <li>Pain and Itching: Pain syndromes are common. 55% of people with multiple sclerosis had "clinically significant pain" at some time according to studies, half of them had chronic pain.</li>
-        <li>Cognitive changes: In 50% of the cases, memory, focus, problem solving, calculus, space-time localisation, organization and other high-level brain functions are affected</li>
-        <li>
-          <p>Depression: Depression is a recurrent pathology linked to multiple sclerosis. Tests and screenings are designed to identify the symptoms.</p>
+        <li><strong>Pain and itching</strong>
+          <p>55% of people with MS have had "clinically significant pain" at some time according to studies, half of them with chronic pain.</p>
+        </li>
+        <li><strong>Cognitive changes</strong>
+          In 50% of people, memory, focus, problem solving, calculus, space-time localisation, organization and other high-level brain functions are affected.
+        </li>
+        <li><strong>Depression</strong>
+          <p>A recurrent illness linked to multiple sclerosis. Tests and screenings are designed to identify the symptoms.</p>
           <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/depression.jpg" alt=""></div>
         </li>
       </ul>
-      <p><strong>Less common symptoms of MS include speech problems, loss of taste, swallowing and breathing problems, tremors and seizures, hearing loss, and immune deficiency.</strong></p>
-      <p><strong>UTIs, physical deconditioning, ulcers, and social and psychological problems are all complications which may arise.</strong></p>
+      <p><strong>Less common symptoms of MS include speech problems, loss of taste, swallowing and breathing problems, tremors and seizures, hearing loss, and immune deficiency. Be wary of the appearance of UTIs and ulcers.</strong></p>
     </article>
     <article id="3" class="[ tab ] [ flow2 ]">
       <h2>Assessment</h2>
@@ -151,8 +172,9 @@ description: Multiple Sclerosis CAE
         <li>Walking and balance</li>
       </ul>
       <p>Important also to observe the patient and talk with him to evaluate his attention and physical symptoms. Early recognition, assessment and treatment are important because cognitive changes can affect a person’s lifestyle.</p>
-      <p>The first signs of cognitive dysfunction may be noticed first by the person with MS or by a family member or colleague: Difficulty finding the right words</p>
+      <p><strong>The first signs of cognitive dysfunction may be noticed first by the person with MS or by a family member or colleague:</strong></p>
       <ul>
+        <li>Difficulty finding the right words</li>
         <li>Difficulty remembering what to do on the job or during daily routines at home</li>
         <li>Difficulty making decisions or showing poor judgment</li>
         <li>Difficulty keeping up with tasks or conversations</li>
