Continue MS page work

--- a/src/content/ms.html
+++ b/src/content/ms.html
@@ -29,6 +29,15 @@ description: Multiple Sclerosis CAE
   ul > * + * { margin-block-start: 1em; }
   li { list-style: outside square; }
   li > * + * { margin-block-start: .5em; }
+  li a {
+    color: hsl(210, 75%, 33%);
+    border-bottom: var(--border-1) solid hsl(210, 75%, 33%);
+  }
+
+  li a:hover {
+    color: hsl(210, 75%, 33%);
+    border: none;
+  }
 
   .tab {
     display: none;
@@ -53,13 +62,15 @@ description: Multiple Sclerosis CAE
     border: var(--border0) double hsl(210, 50%, 33%);
   }
 
-  .cleo {
+  .cleo,
+  .poster {
     border: none;
     filter: brightness(75%);
     transition: filter .1s;
   }
 
-  .cleo:hover {
+  .cleo:hover,
+  .poster:hover {
     filter: brightness(100%);
   }
 
@@ -195,48 +206,68 @@ description: Multiple Sclerosis CAE
       </ul>
       <h3>Cognitive Rehabilitation</h3>
       <p>The term “cognition” refers to all the high-level processes carried out by the human brain. 65% of people with MS will experience some changes in cognitive functioning, most related to speed of information processing, memory and attention.</p>
-      <p>Patients with multiple sclerosis can present memory loss, reading and writing impairments, handwork and coordination problems and trouble resolving problems. They also lose balance due to an inability to concentrate on gait while doing something else or being distracted.</p>
       <p>Cognitive decline is also important to take into consideration when we talk about the psychological aspect of the disease. It is very difficult for the patients and their families to present loss in their functioning capacities in a motor and cognitive way.</p>
-      <p>As physiotherapists it is essential that we adapt our rehabilitation program to help our patients slow down their cognitive decrease. We will need to include some intellectual tasks during our rehabilitation, which we will see now (National multiple sclerosis society website).</p>
       <p>Based on the cognitive test results, including cognitive deficits and strengths, a cognitive rehabilitation plan may be recommended. Cognitive rehabilitation includes a combination of restorative and compensatory activities.</p>
       <p><strong>Restorative activities can include learning and memory exercises:</strong></p>
       <ul>
-        <li>Combine modes of learning—you will be more likely to remember something if you “see it, say it, hear it, write it, do it.” It’s okay to give yourself extra time.</li>
-        <li>Repeat & verify—repeat what you hear and verify that it is correct to improve your attention and memory.</li>
-        <li>Spaced rehearsal—repeat and practice information at intervals spread out over time to improve your ability to store information.</li>
-        <li>Build associations—use memory aids! For example, to remember the name of someone you just met, associate her/his name with a friend or family member of the same name, or with a place, color or event that sounds like the new name.</li>
+        <li><strong>Combine modes of learning</strong>
+          <p>you will be more likely to remember something if you “see it, say it, hear it, write it, do it.” It’s okay to give yourself extra time.</p>
+        </li>
+        <li><strong>Repeat & verify</strong>
+          <p>Repeat what you hear and verify that it is correct to improve your attention and memory.</p>
+        </li>
+        <li><strong>Spaced rehearsal</strong>
+          <p>Repeat and practice information at intervals spread out over time to improve your ability to store information.</p>
+        </li>
+        <li><strong>Build associations</strong>
+          <p>Use memory aids! For example, to remember the name of someone you just met, associate her/his name with a friend or family member of the same name, or with a place, color or event that sounds like the new name.</p>
+        </li>
       </ul>
       <p><strong>Compensatory activities that help make up for functions that are no longer working well may include:</strong></p>
       <ul>
-        <li>Consolidate and centralize—designate one place in your home as the “Grand Central” information centre. Include your master calendar, mail, bills, phone messages, to-do lists, keys, wallet, shopping lists and more.</li>
-        <li>
-          <p>Plan—post a calendar large enough to display everyone’s appointments, activities and social engagements, and reminders! Keep pens or markers hanging right beside it. Or use a computer program set up with reminders for routine tasks (synchronize it with your mobile devices so you have your appointments with you while on the go).</p>
+        <li><strong>Consolidate and centralize</strong>
+          <p>Designate one place in your home as the “Grand Central” information centre. Include your master calendar, mail, bills, phone messages, to-do lists, keys, wallet, shopping lists and more.</p>
+        </li>
+        <li><strong>Plan</strong>
+          <p>Post a calendar large enough to display everyone’s appointments, activities and social engagements, and reminders! Keep pens or markers hanging right beside it. Or use a computer program set up with reminders for routine tasks (synchronize it with your mobile devices so you have your appointments with you while on the go).</p>
           <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/plan.jpg" alt=""></div>
         </li>
-        <li>Record—dictate your to-do list, notes or other things to remember on a digital voice recorder (available on many phones).</li>
-        <li>Remind—use checklists, the alarm on your watch or phone, your kitchen timer, and more.</li>
-        <li>Eliminate or remove yourself from distractions—turn off the TV, music and whatever else is “on” when speaking with someone in person or on the phone. Background visual and noise distractions can make learning or remembering more difficult. If you can’t eliminate the distraction (for example, people talking at a party) then ask, “Can we talk in a quieter place?”</li>
-        <li>
-          <p>Take a break—if you are having difficulty concentrating, take a breath and refresh.</p>
+        <li><strong>Record</strong>
+          <p>Dictate your to-do list, notes or other things to remember on a digital voice recorder (available on many phones).</p>
+        </li>
+        <li><strong>Remind</strong>
+          <p>Use checklists, the alarm on your watch or phone, your kitchen timer, and more.</p>
+        </li>
+        <li><strong>Eliminate distractions</strong>
+          Turn off the TV, music and whatever else is “on” when speaking with someone in person or on the phone. Background visual and noise distractions can make learning or remembering more difficult. If you can’t eliminate the distraction (for example, people talking at a party) then ask, “Can we talk in a quieter place?”
+        </li>
+        <li><strong>Take a break</strong>
+          <p>If you are having difficulty concentrating, take a breath and refresh.</p>
           <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/break.jpg" alt=""></div>
         </li>
-        <li>Do one thing at a time—avoid switching back and forth from one topic or task to another. Finish or find an appropriate stopping place in what you’re working on before you switch to something else.</li>
+        <li><strong>One thing at a time</strong>
+          <p>Avoid switching back and forth from one topic or task to another. Finish or find an appropriate stopping place in what you’re working on before you switch to something else.</p>
+        </li>
       </ul>
 
 
       <p>To improve or maintain cognitive skills, a daily training is highly recommended. The sentence “USE IT OR LOSE IT” has never been more relevant. Playing an instrument or learning a new language are optimal options.</p>
       <p><strong>Here is a list of games that keeps you motivated daily and helping you to enhance your mental capacities, which can be performed alone or with a caregiver.</strong></p>
       <ul>
-        <li>Sudokus (For calculus, memory, attention and ability to solve complex problems): https://sudoku.com/</li>
-        <li>Crosswords (For language, memory, attention): https://www.boatloadpuzzles.com/playcrossword</li>
-        <li>
-          <p>Chess (For abstract reasoning, ability to solve complex problems and attention: https://www.chess.com/</p>
+        <li><strong><a href="https://sudoku.com/">Sudokus</a></strong>
+          <p>For calculus, memory, attention and ability to solve complex problems)</p>
+        </li>
+        <li><strong><a href="https://www.boatloadpuzzles.com/playcrossword">Crosswords</a></strong> 
+          <p>For language, memory, attention</p>
+        </li>
+        <li><strong><a href="https://www.chess.com/">Chess</a></strong>
+          <p>For abstract reasoning, ability to solve complex problems and attention</p>
           <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/chess.jpg" alt=""></div>
         </li>
-        <li>Other selection of brain games: https://www.sheppardsoftware.com/braingames/braingames.htm</li>
+        <li><strong><a href="https://www.sheppardsoftware.com/braingames/braingames.htm">Other selection of brain games</a></strong></li>
       </ul>
 
-      Taking care of the cognitive abilities with physical exercise
+      <h3>Taking care of the cognitive abilities with physical exercise</h3>
       <p>Aerobic exercises are a very useful tool in maintaining the brain in shape.. It can take the form of exercise such as cycling, running a low intensity, hiking.</p>  
       <p>Mild or moderate multiple sclerosis should engage in at least 30 min of moderate-intensity aerobic activity two times per week and strength training for major muscle groups (quadriceps, trunk...) twice per week.:</p>
       <div class="[ img ] [ frame16:9 ]"><img src="/assets/special/ms/exercise.jpg" alt=""></div>
@@ -309,6 +340,7 @@ description: Multiple Sclerosis CAE
           <div class="frame3:2 squeeze4"><a class="cleo" href="https://www.cleo-app.com"><img src="/assets/special/ms/cleo.png" alt=""></a></div>
         </div>
         <p class="fs-1"><em>Made by Alex, Frederik, Pierre, and Servane at University San Pablo, CEU</em></p>
+        <div><a href="/assets/special/ms/poster.png"><img class="[ img poster ] [ squeeze8 ]" src="/assets/special/ms/poster.png" alt=""></a></div>
       </div>
       
       <div class="flow1">
