Add english journal club page

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -50,9 +50,16 @@ description: The pain revolution is here. Whether you're a health professional, 
         <section class="flow1/3">
           <h3>Forms</h3>
           <ul>
-            <li><a href="/en/forms/oemsq-12">ÖMSQ-12</a> - A practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al. 2013.</i></li>
+            <li><a href="/en/forms/oemsq-12/">ÖMSQ-12</a> - A practical screening questionnaire for musculoskeletal complaints, adapted from <i>Gabel et al. 2013.</i></li>
           </ul>
         </section>
+      </section>
+    </div>
+    <div class="[ stack ] [ g3 ]">
+      <h2 class="[ h-fancy ]">Other Projects</h2>
+      <section class="[ flow1/3 ]">
+        <h3>Journal Club</h3>
+        <p><a href="/en/club/">Click here</a> to view information about the USP CEU Faculty of Medicine journal club</p>
       </section>
     </div>
   </div>
