--- a/src/content/en/club.html
+++ b/src/content/en/club.html
@@ -1,30 +1,35 @@
 ---
-translationKey: club
 title: Journal Club
+translationKey: club
 permalink: /en/club/
 description:
 ---
 {% extends 'base.html' %}
+
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
   <div class="[ squeeze12 stack ] [ g3 centerx ]">
-    <h1>Journal Club</h1>
+    <div class="[ flow1/2 ]">
+      <h1>Journal club</h1>
+      <p class="[ fs2 ]"><em>USP CEU Faculty of Medicine</em></p>
+    </div>
     <section class="[ flow2 ]">
       <h2 class="[ h-fancy ]">Schedule</h2>
-      <ul class="[ flow2 ]">
+      <ul class="[ flow3/2 ]">
         {% for event in club_schedule %}
-        {% if not event.archived %}
-        <li class="[ flow1 ]">
+        {% if event.lang == 'en' and not event.archived %}
+        <li class="[ flow1/2 ]">
           <h3>{{ event.date }}</h3>
-          <p>{{ event.topic_en }}</p>
+          <p>{{ event.topic }}</p>
         </li>
         {% endif %}
         {% endfor %}
       </ul>
+      <p>For the Spanish schedule, <a href="/es/club/">visit the Spanish page</a></p>
     </section>
     <section class="[ flow2 ]">
-      <h2 class="[ h-fancy ]">Questions</h2>
+      <h2 class="[ h-fancy ]">Info</h2>
       <ul class="[ flow2 ]">
         <li class="[ flow1 ]">
           <h3>What is the purpose of the club?</h3>
@@ -32,7 +37,7 @@ description:
         </li>
         <li class="[ flow1 ]">
           <h3>Can I come?</h3>
-          <p>Sure! Whether you're studying physiotherapy, medicine, psychology, or something totally unrelated, everyone is welcome!</p>
+          <p>Sure! Whether you're studying physiotherapy, medicine, psychology, or something totally unrelated - everyone is welcome!</p>
         </li>
         <li class="[ flow1 ]">
           <h3>What kinds of articles can I bring?</h3>
@@ -40,12 +45,8 @@ description:
           <p>Find an aspect of the paper which piques your interest. This could be anything, good or bad!</p>
         </li>
         <li class="[ flow1 ]">
-        <h3>Do I have to bring anything?</h3>
-        <p>While you aren't required to bring anything, we highly encourage that you do!</p>
-      </li>
-        <li class="[ flow1 ]">
-          <h3></h3>
-          <p></p>
+          <h3>Do I have to bring anything?</h3>
+          <p>While you aren't required to bring anything, we highly encourage that you do!</p>
         </li>
       </ul>
       <p>Have any further questions, or not sure how to get access to the science? Email me at <a href="mailto:frederik.kehlet@usp.ceu.es">frederik.kehlet@usp.ceu.es</a></p>
