Link to journal page from home

--- a/src/content/en/home.html
+++ b/src/content/en/home.html
@@ -59,7 +59,7 @@ description: The pain revolution is here. Whether you're a health professional, 
       <h2 class="[ h-fancy ]">Other Projects</h2>
       <section class="[ flow1/3 ]">
         <h3>Journal Club</h3>
-        <p><a href="/en/club/">Click here</a> to view information about the USP CEU Faculty of Medicine journal club</p>
+        <p><a href="/en/club/">Click here</a> to view information about the USP CEU Faculty of Medicine journal club.</p>
       </section>
     </div>
   </div>
