--- a/src/content/es/club.html
+++ b/src/content/es/club.html
@@ -11,7 +11,7 @@ description:
 <main>
   <div class="[ squeeze12 stack ] [ g3 centerx ]">
     <div class="[ flow1/2 ]">
-      <h1>Club de investigación</h1>
+      <h1>Club de Investigación</h1>
       <p class="[ fs2 ]"><em>USP CEU Facultad de Medicina</em></p>
     </div>
     <section class="[ flow2 ]">
