--- a/src/content/es/home.html
+++ b/src/content/es/home.html
@@ -11,7 +11,7 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
 {% block body %}
 {% include 'partials/header.html' %}
 <main>
-  <div class="stack g6 centerx squeeze12">
+  <div class="stack g4 centerx squeeze12">
     <section class="stack g2 squeeze11">
       <h1>¡Bienvenid@!</h1>
       <div class="sidebar g2 itemsstart">
@@ -51,6 +51,13 @@ description: La revolución del dolor ya ha llegado. Si eres sanitario, o una pe
             <li><a href="/es/formularios/oemsq-12">ÖMSQ-12</a> - Un cuestionario práctico de cribaje en las dolencias musculoesqueléticas, adaptado y traducido de <i>Gabel et al. 2013.</i><strong> Aún no se ha validado en español.</strong></li>
           </ul>
         </section>
+      </section>
+    </div>
+    <div class="[ stack ] [ g3 ]">
+      <h2 class="[ h-fancy ]">Otros Projectos</h2>
+      <section class="[ flow1/3 ]">
+        <h3>Club de Investigación </h3>
+        <p><a href="/es/club/">Haz clic aquí</a> para ver información sobre el club de investigación de la Facultad de Medicina de USP CEU.</p>
       </section>
     </div>
   </div>
