--- a/src/content/en/club.html
+++ b/src/content/en/club.html
@@ -11,7 +11,7 @@ description:
 <main>
   <div class="[ squeeze12 stack ] [ g3 centerx ]">
     <div class="[ flow1/2 ]">
-      <h1>Journal club</h1>
+      <h1>Journal Club</h1>
       <p class="[ fs2 ]"><em>USP CEU Faculty of Medicine</em></p>
     </div>
     <section class="[ flow2 ]">
