--- a/src/content/es/club.html
+++ b/src/content/es/club.html
@@ -33,7 +33,7 @@ description:
       <ul class="[ flow2 ]">
         <li class="[ flow1 ]">
           <h3>¿Cuál es el objetivo del club?</h3>
-          <p>La idea del club de revistas es debatir investigaciones y avances interesantes en medicina. Juntémonos para celebrar el proceso científico, compartir perspectivas, aprender mucho y, lo más importante, ¡disfrutar de cada momento del camino!</p>
+          <p>La idea del club de investigación es debatir investigaciones y avances interesantes en medicina. Juntémonos para celebrar el proceso científico, compartir perspectivas, aprender mucho y, lo más importante, ¡disfrutar de cada momento del camino!</p>
         </li>
         <li class="[ flow1 ]">
           <h3>¿Puedo ir yo?</h3>
@@ -49,7 +49,7 @@ description:
           <p>Aunque no es obligatorio que traigas nada, te animamos a que lo hagas.</p>
         </li>
       </ul>
-      <p>¿Tienes más preguntas o no sabes cómo acceder a la ciencia? Escríbeme a <a href="mailto:frederik.kehlet@usp.ceu.es">frederik.kehlet@usp.ceu.es</a></p>
+      <p>¿Tienes más preguntas o no sabes acceder a la ciencia? Escríbeme a <a href="mailto:frederik.kehlet@usp.ceu.es">frederik.kehlet@usp.ceu.es</a></p>
       <p>Gracias a Zeph Scamps y Pierre Serrot por ser los coorganizadores.</p>
     </section>
   </div>
